MDEV-12314 Implicit cursor FOR LOOP for cursors with parameters